# Fracta

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Content_Embed_Text.md  Fracta.md  INTRODUCTION.md  LICENSE  README.md  extac_photo_metadata.ipynb  extra_photo_metadata.py  rust-toolchain.toml
.cargo/: config.toml  config.toml.example
.cursor/rules/: dont-edit-code.mdc  mentor-council.mdc
.cursor/skills/mentor-council/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
Fracta_Mac/Fracta_Mac/: ContentView.swift  Fracta_MacApp.swift
Fracta_Mac/Fracta_Mac.xcodeproj/: project.pbxproj
Fracta_Mac/Fracta_MacTests/: Fracta_MacTests.swift
Fracta_Mac/Fracta_MacUITests/: Fracta_MacUITests.swift  Fracta_MacUITestsLaunchTests.swift
Fracta_VSCode/: Fracta in VScode.md  Fracta_0.3版本改动说明(base on Vscode).md  Template_Flow.md  Template_Library.md  Template_Node.md  Template_random_library.md  output_0624-0703.md  your-first-template.md
apple/: README.md
apple/Fracta.swiftpm/: Package.swift
apple/Fracta.swiftpm/Sources/Fracta/App/: FractaApp.swift
apple/Fracta.swiftpm/Sources/Fracta/Components/: FileRowView.swift
apple/Fracta.swiftpm/Sources/Fracta/Core/: FractaBridge.swift  MarkdownRenderer.swift  Models.swift  PerfLog.swift
apple/Fracta.swiftpm/Sources/Fracta/Extensions/: GameControllerSupport.swift
apple/Fracta.swiftpm/Sources/Fracta/Styles/: GlassStyle.swift
apple/Fracta.swiftpm/Sources/Fracta/Views/: AiChatView.swift  ContentView.swift  DataSourcesView.swift  DocumentPreviewView.swift  NativeTextView.swift  OnboardingView.swift  PlatformSpecific.swift  SearchView.swift  SettingsView.swift
apple/Fracta.swiftpm/Sources/FractaFFIHeaders/: fracta_ffiFFI.h  module.modulemap  shim.c
apple/scripts/: build-xcframework.sh
crates/fracta-ai/: Cargo.toml
crates/fracta-ai/src/: lib.rs
crates/fracta-comm/: Cargo.toml
crates/fracta-comm/src/: lib.rs
crates/fracta-crypto/: Cargo.toml
crates/fracta-crypto/src/: lib.rs
crates/fracta-ffi/: Cargo.toml
crates/fracta-ffi/src/: lib.rs
crates/fracta-framework/: Cargo.toml
crates/fracta-framework/src/: lib.rs
crates/fracta-index/: Cargo.toml
crates/fracta-index/src/: error.rs  lib.rs  metadata.rs  search.rs
crates/fracta-index/tests/: integration_test.rs
crates/fracta-note/: Cargo.toml
crates/fracta-note/src/: block.rs  convert.rs  front_matter.rs  lib.rs  text.rs
crates/fracta-platform/: Cargo.toml
crates/fracta-platform/src/: lib.rs
crates/fracta-query/: Cargo.toml
crates/fracta-query/src/: lib.rs
crates/fracta-sync/: Cargo.toml
crates/fracta-sync/src/: lib.rs
crates/fracta-vfs/: Cargo.toml
crates/fracta-vfs/src/: entry.rs  error.rs  ignore.rs  init.rs  lib.rs  location.rs  scope.rs  settings.rs  watcher.rs  writer.rs
docs/: ENGINEERING.md  LIV_System_Manual.md  PRD.md  README.md  SPEC.md
docs/adr/: 0001-product-name-fracta.md  0002-information-architecture-database-now-past.md  0003-core-architecture-rust-core-platform-shells.md  0004-ingestion-strategy-platform-core-ingestors.md  0005-uid-strategy-lazy-assignment.md  0006-locations-global-view.md  0007-managed-scope-and-ignore-rules.md  0008-metadata-persistence-anti-dsstore.md  0009-docs-simplification-and-english-only.md  0010-three-layer-architecture.md  0011-liv-as-default-application-profile.md  0012-past-format-markdown-sot-ai-cache.md  0013-open-source-engine-framework-commercial-application.md  0014-rename-database-to-library.md  0015-index-sqlite-metadata-tantivy-search.md  0016-apache-2.0-license.md  README.md
docs/profiles/: liv-profile-spec.md
