[package]
name = "fracta-ai"
description = "Fracta Engine: AI primitives — LLM calls, embeddings, prompt-template management"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
