[package]
name = "fracta-ai"
description = "Fracta Engine: AI primitives — LLM calls, embeddings, prompt-template management"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }

# Future: uncomment when cloud providers are implemented (0.2+)
# tokio = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# tracing = { workspace = true }
# reqwest = { workspace = true }
