[package]
name = "fracta-note"
description = "Fracta Engine: Markdown parser + block model — parsing, rendering, computed blocks"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
comrak = { workspace = true }
